# professor

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ci/dockerfiles/: musl-builder-debug.Dockerfile  musl-builder-release.Dockerfile  musl-tester-debug.Dockerfile  musl-tester-release.Dockerfile
ci/scripts/: build-debug.sh  build-musl-debug.sh  build-musl-release.sh  build-release.sh  install.sh  test-debug.sh  test-musl-debug.sh  test-musl-release.sh  test-release.sh
dockerfiles/: generic-module-debug.Dockerfile  generic-module-release.Dockerfile  local-module-debug.Dockerfile  local-module-release.Dockerfile
src/: lib.rs  main.rs  professor.rs
src/persistence/: database.rs  models.rs  schema.rs
