[package]
name = "professor"
version = "0.1.0"
authors = ["donacrio <donatien.criaud@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
openssl =  "0.10"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1"